labs/5-traffic-management/lab2/vs-reviews-shifting-90-10.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  exportTo:
  - $USER_NAMESPACE-back
  - $USER_NAMESPACE-front
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 90
    - destination:
        host: reviews
        subset: v3
      weight: 10
